mudanças nos textos

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <h2>PetCare: Cuidando do Seu Melhor Amigo Desde 2013</h2><br><br><br>
             <p> A <strong class="forte">PetCare</strong> atua há<strong class="forte"> mais de 10 anos em Franca</strong>, sendo criada com o objetivo de oferecer um atendimento veterinário completo, organizado e baseado na confiança entre profissionais e tutores.</p>
             <p>A clínica nasceu a partir da necessidade percebida pelos seus idealizadores de contar com um espaço que unisse<strong class="forte"> conhecimento técnico, estrutura adequada e atendimento personalizado</strong> para cães, gatos e outros animais de pequeno porte. Franca foi escolhida por ser uma cidade em constante crescimento, com forte presença de famílias que consideram seus pets parte essencial do dia a dia e buscam serviços veterinários de qualidade.</p>
-            <p>Desde sua fundação, a PetCare tem como foco a <strong class="forte">medicina veterinária preventiva,</strong> o  acompanhamento contínuo da saúde dos animais e a orientação clara aos tutores, garantindo decisões concientes e seguras em cada atendimento.</p>
-            <p>Atualmente, a clínica oferece serviços como<strong class="forte"> consultas veterinárias, vacinação, exames laboratoriais, castração, atendimento de emergência, orientação nutricional</strong> e <strong class="forte">Banho e tosa,</strong> sempre priosando o bem-estar e a segurança dos pets.</p>
-            <p>Com uma equipe qualificada e em constante evolução para atender seu amigo de quatro patas da melhor forma possível. A PetCare consolidou sua  atuação em Franca por meio de um atendimento ético, transparente e comprometido com a saúde e a qualidade de vida dos animais, mantendo como príncipio tratar cada paciente  de uma forma única e especial.</p>
+            <p>Desde sua fundação, a PetCare tem como foco a <strong class="forte">medicina veterinária preventiva,</strong> o  acompanhamento contínuo da saúde dos animais e a orientação clara aos tutores, garantindo decisões conscientes e seguras em cada atendimento.</p>
+            <p>Atualmente, a clínica oferece serviços como<strong class="forte"> consultas veterinárias, vacinação, exames laboratoriais, castração, atendimento de emergência, orientação nutricional</strong> e <strong class="forte">Banho e tosa,</strong> sempre priorizando o bem-estar e a segurança dos pets.</p>
+            <p>Com uma equipe qualificada e em constante evolução para atender seu amigo de quatro patas da melhor forma possível. A PetCare consolidou sua  atuação em Franca por meio de um atendimento ético, transparente e comprometido com a saúde e a qualidade de vida dos animais, mantendo como princípio tratar cada paciente  de uma forma única e especial.</p>
         </div>
         <div class="container_sobre">
             <img id="animais" src="/imagens/_dog__cat__chat__chien__lapin__bouledogue__cobaye-removebg-preview.png" alt="animais">
@@ -237,9 +237,9 @@
 
         <!--Aqui entra a foto do atendimento personalizado com o pet-->
 
-            <h2>Porque Escolher a Nossa Clínica</h2><br>
-            <p>Atuamos desde 2013, em Franca com um atendimento 24h para atender as necessidades de cada pet, garantindo que você tenha o suporte e o apoio veterinário sempre que precisar.</p>
-            <p>Nós contamos com um laboratório próprio e raio X digital para diagnósticos cada vez mais rápidos e precisos.</p>
+            <h2>Por que Escolher a Nossa Clínica</h2><br>
+            <p>Atuamos desde 2013 em Franca com um atendimento 24h para atender as necessidades de cada pet, garantindo que você tenha o suporte e o apoio veterinário sempre que precisar.</p>
+            <p>Nós contamos com um laboratório próprio e raio-x digital para diagnósticos cada vez mais rápidos e precisos.</p>
 
         <!--icones para deixar mais bonitinho-->
             <div id="icons-container">
@@ -247,7 +247,7 @@
                 <h3><i class="fa-solid fa-heart"></i> Amantes de Pets</h3>
                 <h3><i class="fa-solid fa-award"></i> Equipe Qualificada</h3>
                 
-                <h3><i class="fa-solid fa-suitcase-medical"></i> 24 Horas 7 dias por semana</h3>
+                <h3><i class="fa-solid fa-suitcase-medical"></i> 24 Horas, 7 dias por semana</h3>
                 <h3><i class="fa-solid fa-hospital"></i> Estrutura Completa</h3>
             </div>
 
